# Financial-AdvisorBot

./: .gitignore  README.md
back-end/: README.md  pyproject.toml  requirements.txt  test_dataloader.py
fine-tuning/: Modelfile  Modelfile-qwen3  Phi-3.5_Conversational.ipynb  Phi4_Conversational.ipynb  Qwen3_(4B)_Instruct.ipynb  Qwen3_(4B)_Instruct_train.ipynb  README.md  requirements.tx
front-end/: README.md
reinforcement-learning/: 0_data_exploration.ipynb  0_dataset_exploration.ipynb  0_yfinance_exploration.ipynb  10_Backtesting.ipynb  1_1_data_processing.ipynb  1_2_data_processing.ipynb  1_3_data_prepocessing.ipynb  1_Data_exploration.ipynb  1_data_processing.ipynb  1_training_dataprep.ipynb  2_1_RL_state.ipynb  2_2_RL_implementation.ipynb  2_Data_collection_practice.ipynb  2_prep_rl.ipynb  2_reinforcement_learning.ipynb  3_Data_collection.ipynb  4_EDA_FE.ipynb  7_buffers.py  (+18 more)
synthetic-data-generation/crewai/consultgen/: README.md  pyproject.toml
synthetic-data-generation/crewai/consultgen/src/consultgen/: crew.py  main.py
synthetic-data-generation/crewai/consultgen/src/consultgen/config/: tasks.yaml
synthetic-data-generation/crewai/conv_flow/: README.md  pyproject.toml  scenario_format.py  scenarios.json
synthetic-data-generation/crewai/conv_flow/extras/: personas_v1_011826.json
synthetic-data-generation/crewai/conv_flow/src/conv_flow/: models.py
synthetic-data-generation/crewai/conv_flow/src/conv_flow/crews/scenario_crew/: scenario_crew.py
synthetic-data-generation/crewai/conv_flow/src/conv_flow/crews/scenario_crew/config/: agents.yaml  tasks.yaml
(+143 files in other folders)
