[project]
name = "consultgen"
version = "0.1.0"
description = "consultGen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1",
    "fastapi>=0.127.0",
    "litellm>=1.75.3",
]

[project.scripts]
consultgen = "consultgen.main:run"
run_crew = "consultgen.main:run"
train = "consultgen.main:train"
replay = "consultgen.main:replay"
test = "consultgen.main:test"
run_with_trigger = "consultgen.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
