[project]
name = "conv_flow"
version = "0.1.0"
description = "conv-flow using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.7.1",
]

[project.scripts]
kickoff = "conv_flow.main:kickoff"
run_crew = "conv_flow.main:kickoff"
plot = "conv_flow.main:plot"
run_with_trigger = "conv_flow.main:run_with_trigger"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
